deploymentconfig.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  name: myapp
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
        - name: mycontainer
          image: nginx
