statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mystatefulset
spec:
  serviceName: "myapp"
  replicas: 3
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
        - name: mycontainer
          image: nginx
