ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
spec:
  rules:
    - host: "myapp.example.com"
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: myservice
              port:
                number: 80
