route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: myroute
spec:
  to:
    kind: Service
    name: myservice
