NetworkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-http
spec:
  podSelector:
    matchLabels:
      app: myapp
  ingress:
    - from:
        - ipBlock:
            cidr: 172.17.0.0/16
      ports:
        - protocol: TCP
          port: 80
